# claude-agent-sdk-rust

./: Cargo.toml  README.md
claude-agent-sdk-macros/: Cargo.toml
claude-agent-sdk-macros/src/: lib.rs
scripts/: test-session-stores-docker.sh
src/: client.rs  errors.rs  lib.rs  mcp.rs  query.rs  session_stores.rs  transport.rs  types.rs
src/internal/: client.rs  message_parser.rs  mod.rs  query.rs  session_import.rs  session_mutations.rs  session_resume.rs  session_store.rs  session_store_validation.rs  session_summary.rs  sessions.rs  task_compat.rs  transcript_mirror_batcher.rs
src/testing/: mod.rs  reference_session_stores.rs  session_store_conformance.rs
tests/: build_wheel.rs  client.rs  errors.rs  example_postgres_session_store.rs  example_redis_session_store.rs  example_s3_session_store.rs  integration.rs  message_parser.rs  postgres_session_store.rs  query.rs  redis_session_store.rs  s3_session_store.rs  sdk_mcp_attribute.rs  sdk_mcp_integration.rs  session_helpers_store.rs  session_import.rs  session_mutations.rs  session_resume.rs  session_store_conformance.rs  session_summary.rs  sessions.rs  streaming_client.rs  task_compat.rs  tool_callbacks.rs  transcript_mirror.rs  types.rs  version_metadata.rs
