[package]
name = "claude-agent-sdk-rust"
version = "0.1.75"
edition = "2024"

[workspace]
members = ["claude-agent-sdk-macros"]

[lib]
name = "claude_agent_sdk"
path = "src/lib.rs"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
chrono = { version = "0.4", features = ["serde"] }
claude-agent-sdk-macros = { path = "claude-agent-sdk-macros" }
dirs = "6"
futures = "0.3"
indexmap = { version = "2", features = ["serde"] }
libc = "0.2"
once_cell = "1"
opentelemetry = "0.31"
regex = "1"
redis = { version = "0.32", features = ["tokio-comp"] }
rmcp = "1.6"
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-opentelemetry = "0.32"
unicode-general-category = "1"
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
